syntax = "proto3";
package milkyway.vestingreward.v1;

import "amino/amino.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "github.com/milkyway-labs/milkyway/v7/x/vestingreward/types";

// Query defines the gRPC querier service.
service Query {
  // VestingAccountsRewardRatio queries the vesting accounts reward ratio.
  rpc VestingAccountsRewardRatio(QueryVestingAccountsRewardRatioRequest) returns (QueryVestingAccountsRewardRatioResponse) {
    option (google.api.http).get = "/milkyway/vestingreward/v1/vesting_accounts_reward_ratio";
  }
}

// QueryVestingAccountsRewardRatioRequest is request type for the Query/VestingAccountsRewardRatio RPC method.
message QueryVestingAccountsRewardRatioRequest {}

// QueryVestingAccountsRewardRatioResponse is response type for the Query/VestingAccountsRewardRatio RPC method.
message QueryVestingAccountsRewardRatioResponse {
  // VestingAccountsRewardRatio defines the proportion of staking rewards allocated to
  // vesting accounts relative to normal accounts.
  string vesting_accounts_reward_ratio = 2 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}
